--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
           <div class="about__content">
             <h2 class="about__article-title">Smart Home's Smart Services</h2>
             <p>
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
@@ -136,9 +134,7 @@
           <div class="about__content">
             <h2 class="about__article-title">Smart Home's Smart Services</h2>
             <p>
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
@@ -154,9 +150,7 @@
           <div class="about__content">
             <h2 class="about__article-title">Smart Home's Smart Services</h2>
             <p>
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
             <a href="#" class="btn btn-primary">Learn More</a>
           </div>
@@ -173,9 +167,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -185,9 +177,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -196,9 +186,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -207,9 +195,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -218,9 +204,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -229,9 +213,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -240,9 +222,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -251,9 +231,7 @@
           <div class="faq__question-answer">
             <h4 class="faq__question">How does this work?</h4>
             <p class="faq__answer">
-              Wisdom new and valley answer. Contented it so is discourse
-              recommend. Man its upon him call mile. An pasture he himself
-              believe ferrars besides cottage.
+              Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
             </p>
           </div>
         </article>
@@ -266,9 +244,7 @@
         <div class="downloadApp__content">
           <h1>Donwnload<br />App</h1>
           <p>
-            Wisdom new and valley answer. Contented it so is discourse
-            recommend. Man its upon him call mile. An pasture he himself believe
-            ferrars besides cottage.
+            Smart Home is a website dedicated to helping homeowners make their homes smarter and more efficient. We provide information on the latest smart home technology, products, and services, as well as tips and tricks for getting the most out of your smart home setup. Our goal is to make it easy for you to find the right products and services to make your home smarter and more efficient. Whether you’re looking for a way to automate your lights or want to monitor energy usage in your home, we have the resources you need.
           </p>
           <div class="cta">
             <a
